# triton

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.antigravitycli/: 9250e9a9-2857-48b6-ba22-14e82be3c279.json
.claude/skills/triton-platform/templates/upstream-agent-axum/: Cargo.toml  README.md
.claude/skills/triton-platform/templates/upstream-agent-axum/src/: main.rs
.github/workflows/: build-dz-triton-explorer.yml  build-dz-triton-gateway.yml  build-dz-triton-nonprod.yml  build-dz-triton.yml  ci.yml
apps/demo-agent/: Cargo.toml
apps/demo-agent/deploy/: Dockerfile  demo-agent.nomad.hcl
apps/demo-agent/src/: main.rs
apps/explorer/: README.md  analysis_options.yaml  pubspec.yaml
crates/triton-adapters-http/: Cargo.toml
crates/triton-adapters-http/src/: a2a.rs  capture.rs  cors.rs  identity.rs  lib.rs  mcp.rs  metrics.rs  outbound.rs  rest.rs
crates/triton-bin/: Cargo.toml  build.rs
crates/triton-bin/src/: main.rs  optional_adapters.rs  settings.rs  tools.rs
crates/triton-chat-discord/: Cargo.toml
crates/triton-chat-discord/src/: gateway.rs  lib.rs  surface_mapper.rs
crates/triton-chat-email/: Cargo.toml
crates/triton-chat-email/src/: courier.rs  lib.rs  surface_mapper.rs
crates/triton-chat-gemini/: Cargo.toml
crates/triton-chat-googlechat/: Cargo.toml
crates/triton-chat-googlechat/src/: jwt_verifier.rs  lib.rs  surface_mapper.rs  token_minter.rs
crates/triton-chat-msteams/: Cargo.toml
crates/triton-chat-msteams/src/: jwt_verifier.rs  lib.rs  surface_mapper.rs  token_client.rs
crates/triton-chat-signal/: Cargo.toml
crates/triton-chat-signal/src/: lib.rs  signald_client.rs  surface_mapper.rs
crates/triton-chat-telegram/: Cargo.toml
crates/triton-chat-telegram/src/: form_state.rs  lib.rs  surface_mapper.rs
crates/triton-chat-twilio/: Cargo.toml
crates/triton-chat-twilio/src/: courier.rs  lib.rs  rcs.rs  signature.rs  surface_mapper.rs  whatsapp.rs
crates/triton-chat-whatsapp/: Cargo.toml
crates/triton-chat-whatsapp/src/: bridge.rs  lib.rs  surface_mapper.rs
crates/triton-core/: Cargo.toml
crates/triton-core/src/: audit.rs  dispatcher.rs  error.rs  lib.rs  metrics.rs  outbound.rs  principal.rs  ratelimit.rs  stream.rs  tool.rs  trace.rs
crates/triton-core/src/a2ui/: mod.rs  v08.rs  v09.rs
crates/triton-correlation/: Cargo.toml
crates/triton-correlation/src/: lib.rs
crates/triton-embed/: Cargo.toml
crates/triton-embed/src/: lib.rs
crates/triton-embed/tests/: trio.rs
crates/triton-identity/: Cargo.toml
crates/triton-identity/src/: lib.rs  signer.rs
crates/triton-manifest/: Cargo.toml
crates/triton-rasterizer/: Cargo.toml
crates/triton-rasterizer/src/: delegate.rs  lib.rs  render.rs  svg.rs
crates/triton-secrets/: Cargo.toml
crates/triton-secrets/src/: lib.rs  vault_token.rs
crates/triton-tests/: Cargo.toml
crates/triton-tests/fixtures/: manifest-bad-vault-ref.yaml  manifest-discord-dashboard.yaml  manifest-discord-gateway-test.yaml  manifest-discord-rate-limit.yaml  manifest-discord-test.yaml  manifest-email-test.yaml  manifest-google-chat-async-test.yaml  manifest-google-chat-card-test.yaml  manifest-google-chat-oidc-test.yaml  manifest-google-chat-sa-test.yaml  manifest-google-chat-test.yaml  manifest-google-chat-theme-test.yaml  manifest-googlechat-selfenrol-test.yaml  manifest-googlechat-upstream-collision.yaml  manifest-googlechat-upstream-test.yaml  manifest-literal-secret.yaml  manifest-missing-coverage.yaml  manifest-missing-cred.yaml  manifest-msteams-azure-empty-tenants.yaml  manifest-msteams-azure-test.yaml  manifest-msteams-report-test.yaml  manifest-msteams-test.yaml  manifest-msteams-vault.yaml  manifest-optional-adapters.yaml  manifest-per-tenant-rate-limit.yaml  manifest-public-url-exemption-scoped.yaml  manifest-rate-limit-test.yaml  manifest-signal-test.yaml  manifest-signal-vault.yaml  manifest-telegram-longpoll-test.yaml  manifest-telegram-test.yaml  manifest-telegram-upstream-identity.yaml  manifest-twilio-rcs-test.yaml  manifest-twilio-signature-missing-cred.yaml  manifest-twilio-signature-test.yaml  manifest-twilio-whatsapp-distinct-tokens.yaml  manifest-twilio-whatsapp-missing-from.yaml  manifest-twilio-whatsapp-status-callback-test.yaml  manifest-twilio-whatsapp-template-test.yaml  manifest-twilio-whatsapp-test.yaml  (+14 more)
crates/triton-tests/src/: chat_courier_fixture.rs  discord_gateway_fixture.rs  lib.rs  oidc_fixture.rs  rasterizer_fixture.rs  signald_fixture.rs  upstream_fixture.rs  whatsapp_bridge_fixture.rs
crates/triton-tests/tests/: a2a.rs  a2a_upstream_status.rs  a2ui_parity.rs  acc_hardening.rs  audit_retrieval.rs  consumer_smoke.rs  cors.rs  demo_panel.rs  deploy_manifest.rs  deploy_triton_manifest.rs  dev_token.rs  discord.rs  discord_dashboard.rs  discord_gateway.rs  echo.rs  email_outbound.rs  explorer_contract.rs  forward_principal.rs  forwarded_auth.rs  google_chat.rs  healthz.rs  manifest.rs  manifest_endpoint.rs  mcp.rs  mcp_apps_acceptance.rs  metrics.rs  metrics_endpoint.rs  msteams.rs  msteams_callback.rs  msteams_report.rs  oidc.rs  optional_adapters.rs  outbound.rs  outbound_issuer.rs  process_liveness.rs  rasterizer.rs  rate_limit.rs  rest_tools.rs  runtime_discovery.rs  signal.rs  (+35 more)
crates/triton-tests/tests/it/: main.rs
crates/triton-upstream/: Cargo.toml
crates/triton-upstream/src/: consul.rs  lib.rs  sse.rs  static_upstream.rs  vault.rs
deploy/: README.md
deploy/gateway/: Dockerfile  adapter.yaml  triton.nomad.hcl
deploy/local-e2e/: README.md  explorer-rodney.sh  funnel-mcp.sh  mcp-smoke.sh
doc/: architecture.md  consumer-integration-tests.md  realizations.md  requirements.md  upstream-agent-contract.md
examples/adk-hello-agent/: Cargo.toml  README.md  adapter-manifest.fragment.yaml  agent.nomad.hcl
examples/adk-hello-agent/src/: agent.rs  main.rs
examples/adk-hello-agent/tests/: live_llm.rs  resolver_e2e.rs  triton_e2e.rs
examples/adk-hello-agent/tests/fixtures/: manifest-resolver-e2e.yaml
examples/consumer-smoke/: Cargo.toml
examples/consumer-smoke/src/: lib.rs
examples/consumer-smoke/tests/: smoke.rs
(+108 files in other folders)
