[workspace]
resolver = "3"
members = [
    "crates/triton-core",
    "crates/triton-identity",
    "crates/triton-manifest",
    "crates/triton-secrets",
    "crates/triton-correlation",
    "crates/triton-chat-telegram",
    "crates/triton-chat-discord",
    "crates/triton-chat-whatsapp",
    "crates/triton-chat-googlechat",
    "crates/triton-chat-msteams",
    "crates/triton-chat-signal",
    "crates/triton-upstream",
    "crates/triton-adapters-http",
    "crates/triton-bin",
    "crates/triton-rasterizer",
    "crates/triton-tests",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "BUSL-1.1"
publish = false

[workspace.dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "net", "process", "time", "io-util"] }
tokio-util = { version = "0.7", default-features = false }
tower = { version = "0.5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Integration-test crate deps
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Dashboard rasterizer (PR 36). Pure-Rust SVG → PNG pipeline, no
# system deps — keeps the static-link story (NFR-PT-2). Pinned
# here so the rasterizer crate and any future consumer share one
# version. `usvg` text rendering enabled so dashboard titles +
# tile labels actually appear in the rendered PNG; system-fonts
# left ON because the alternative is shipping a TTF inside the
# binary, and substrate nodes ship with a sans-serif fallback
# (DejaVu Sans) that resvg's fontdb auto-discovers.
resvg = { version = "0.47", default-features = false, features = ["text", "system-fonts"] }
tiny-skia = { version = "0.11", default-features = false, features = ["std", "png-format"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
