# Demo upstream agent for the Triton substrate demo. A self-contained
# crate (its own [workspace]) so it builds/deploys independently of the
# Triton gateway workspace — mirrors apps/explorer being a separate
# deployable.
[package]
name = "triton-demo-agent"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
