[package]
name = "triton-adapters-http"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
# Accept a hardcoded `Bearer dev-token` and construct a synthetic
# Principal. Default-on for dev builds; production builds turn this
# off (--no-default-features) so the OIDC path (PR 8) is the only
# accepted identity — ADR-10, FR-I-5.
default = ["dev-token"]
dev-token = []
# Dev-only: capture request/response bodies per trace_id for the Explorer
# Trace view (issue #75). Never enable in release.
capture = ["triton-core/capture"]

[dependencies]
triton-core = { path = "../triton-core" }
triton-identity = { path = "../triton-identity" }
triton-manifest = { path = "../triton-manifest" }
triton-chat-telegram = { path = "../triton-chat-telegram" }
triton-chat-discord = { path = "../triton-chat-discord" }
triton-chat-googlechat = { path = "../triton-chat-googlechat" }
triton-chat-msteams = { path = "../triton-chat-msteams" }
triton-chat-signal = { path = "../triton-chat-signal" }
triton-chat-whatsapp = { path = "../triton-chat-whatsapp" }
axum = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
