[package]
name = "triton-bin"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "triton"
path = "src/main.rs"

[features]
# `--no-default-features` builds a production binary that rejects
# any non-OIDC bearer at the identity boundary (ADR-10, FR-I-5).
# Default-on for dev.
default = ["dev-token"]
dev-token = [
    "triton-adapters-http/dev-token",
    "triton-chat-telegram/dev-token",
    "triton-chat-whatsapp/dev-token",
]

[dependencies]
base64 = "0.22"
triton-core = { path = "../triton-core" }
triton-identity = { path = "../triton-identity" }
triton-upstream = { path = "../triton-upstream" }
triton-manifest = { path = "../triton-manifest" }
triton-secrets = { path = "../triton-secrets" }
triton-chat-telegram = { path = "../triton-chat-telegram" }
triton-chat-discord = { path = "../triton-chat-discord" }
triton-chat-whatsapp = { path = "../triton-chat-whatsapp" }
triton-chat-googlechat = { path = "../triton-chat-googlechat" }
triton-chat-msteams = { path = "../triton-chat-msteams" }
triton-chat-signal = { path = "../triton-chat-signal" }
triton-chat-email = { path = "../triton-chat-email" }
triton-rasterizer = { path = "../triton-rasterizer" }
triton-adapters-http = { path = "../triton-adapters-http", default-features = false }
async-trait = "0.1"
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# `url` is a transitive dep of reqwest; pinning it explicitly lets
# the NFR-S-4 egress allowlist checks parse + host-match URLs without
# falling back to substring matches that allowed e.g.
# `https://www.googleapis.com.evil.example/...` to slip through a
# `starts_with("https://www.googleapis.com")` check.
url = "2"
