[package]
name = "triton-chat-discord"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
triton-core = { path = "../triton-core" }
triton-correlation = { path = "../triton-correlation" }
triton-manifest = { path = "../triton-manifest" }
triton-rasterizer = { path = "../triton-rasterizer" }
triton-secrets = { path = "../triton-secrets" }
axum = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
