[package]
name = "triton-chat-email"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
triton-core = { path = "../triton-core" }
serde = { workspace = true }
serde_json = { workspace = true }
# Normalise the agent's portable markdown into the HTML email body.
regex = "1"
