[package]
name = "triton-chat-googlechat"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
triton-core = { path = "../triton-core" }
triton-manifest = { path = "../triton-manifest" }
triton-secrets = { path = "../triton-secrets" }
axum = { workspace = true }
jsonwebtoken = "9"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
