[package]
name = "triton-chat-googlechat"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
triton-core = { path = "../triton-core" }
triton-correlation = { path = "../triton-correlation" }
triton-manifest = { path = "../triton-manifest" }
triton-rasterizer = { path = "../triton-rasterizer" }
triton-secrets = { path = "../triton-secrets" }
axum = { workspace = true }
jsonwebtoken = "9"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
# Decode an upstream-rendered chart PNG (peacock render_report `png_base64`)
# and content-hash it into the ephemeral image-cache key.
base64 = "0.22"
sha2 = "0.10"
# Normalise the agent's portable markdown into Google Chat's text syntax.
regex = "1"
