[package]
name = "triton-chat-msteams"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
triton-core = { path = "../triton-core" }
triton-correlation = { path = "../triton-correlation" }
triton-manifest = { path = "../triton-manifest" }
triton-secrets = { path = "../triton-secrets" }
axum = { workspace = true }
# Decode an upstream-rendered chart PNG (peacock render_report `png_base64`)
# to serve it from the signed `…/img/{token}` route (#200).
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
jsonwebtoken = "9"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4"] }
