[package]
name = "triton-chat-telegram"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
# Mirrors the workspace-wide `dev-token` feature: gates dev-only
# command parser routes (e.g. `/empty` → `empty_surface`) so the
# routing table matches the registry's set of registered tools.
# Off in production builds.
dev-token = []

[dependencies]
triton-core = { path = "../triton-core" }
triton-correlation = { path = "../triton-correlation" }
triton-manifest = { path = "../triton-manifest" }
triton-secrets = { path = "../triton-secrets" }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = "2"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
