[package]
name = "triton-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[features]
# Dev-only: hold token-stripped request/response bodies per trace_id in
# memory for the Explorer Trace view (issue #75). Off by default; never in
# release. Enabled transitively by triton-adapters-http/capture.
capture = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
