[package]
name = "triton-identity"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
triton-core = { path = "../triton-core" }
jsonwebtoken = "9"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# Test-only: generate a throwaway RSA keypair + build its JWKS to verify the
# signer mints tokens the OIDC verifier accepts. Not used by the signer itself
# (production supplies the key + JWKS via config), so it stays out of the build.
rsa = "0.9"
rand = "0.8"
base64 = "0.22"

