[package]
name = "triton-secrets"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
triton-manifest = { path = "../triton-manifest" }
async-trait = "0.1"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
