[package]
name = "triton-tests"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
# CI link-memory (doc/realizations.md §7): the ~58 files under `tests/`
# would each compile to a SEPARATE test binary, every one statically
# linking the full dependency tree (~58 fat debug links). Disable
# auto-discovery and aggregate them into ONE `it` binary (tests/it/main.rs
# `mod`-includes each file) so the workspace test build does a single link
# instead of 58. Tests are unchanged — each file is just a module now.
autotests = false

[[test]]
name = "it"
path = "tests/it/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
libc = "0.2"
triton-manifest = { path = "../triton-manifest" }
triton-correlation = { path = "../triton-correlation" }
triton-core = { path = "../triton-core" }
triton-rasterizer = { path = "../triton-rasterizer" }
# Decode the rasterizer's PNG output to assert rendered text ink (#135).
tiny-skia = { workspace = true }

# Real OIDC fixture: Ed25519 keypair + JWT sign + tiny axum issuer
# serving discovery + JWKS. No mocks per CLAUDE.md §1.
# Multipart enabled for PR 36's FakeTelegramApi `sendPhoto` route.
axum = { workspace = true, features = ["multipart", "ws"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
getrandom = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "9"
serde = { workspace = true }
